--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <script>
     // У каждого пользователя будет случайный стиль для блока с сообщенями,
     // поэтому в этом кусочке кода мы получаем случайные числа
-    let min = 1;
-    let max = 6;
-    var random = Math.floor(Math.random() * (max - min)) + min;
+    let min = 1,
+      max = 6,
+      random = Math.floor(Math.random() * (max - min)) + min;
 
     // Устаналиваем класс в переменную в зависимости от случайного числа
     // Эти классы взяты из Bootstrap стилей
@@ -87,32 +87,32 @@
       // Включаем socket.io и отслеживаем все подключения
       let socket = io.connect(),
         // Делаем переменные на:
-        form = document.getElementById("messForm"), // Форму сообщений
-        name = document.getElementById("name"), // Поле с именем
-        textarea = document.getElementById("message"), // Текстовое поле
-        all_messages = document.getElementById("all_mess"), // Блок с сообщениями
+        $form = $("#messForm"), // Форму сообщений
+        $name = $("#name"), // Поле с именем
+        $textarea = $("#message"), // Текстовое поле
+        $all_messages = $("#all_mess"); // Блок с сообщениями
 
         // Отслеживаем нажатие на кнопку в форме сообщений
-        $form.submit(function (event) {
+        $form.submit((event) => {
           // Предотвращаем классическое поведение формы
           event.preventDefault();
           // В сокет отсылаем новое событие 'send mess',
           // в событие передаем различные параметры и данные
           socket.emit('send mess', {
-            mess: textarea.val(),
-            name: name.val(),
+            mess: $textarea.val(),
+            name: $name.val(),
             className: alertClass
           });
           // Очищаем поле с сообщением
-          textarea.val('');
+          $textarea.val('');
         });
 
       // Здесь отслеживаем событие 'add mess', 
       // которое должно приходить из сокета в случае добавления нового сообщения
-      socket.on('add mess', function (data) {
+      socket.on('add mess', (data) => {
         // Встраиваем полученное сообщение в блок с сообщениями
         // У блока с сообщением будет тот класс, который соответвует пользователю что его отправил
-        all_messages.append("<div class='alert alert-" + data.className + "'><b>" + data.name + "</b>: " + data
+        $all_messages.append("<div class='alert alert-" + data.className + "'><b>" + data.name + "</b>: " + data
           .mess + "</div>");
       });
 
